--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -7,6 +7,9 @@
     <item android:id="@+id/setting"
         android:title="Setting"/>
 
+    <item android:title="Delete All notes"
+        android:id="@+id/delete"/>
+
     <item android:title="Log out"
         android:id="@+id/logOut"/>
 </menu>
