app is working fine, Note class is modified for Date, date text view is added in note item layout, recycleItemDelete method is added for deleting and undo note, snackbar is feature also added, ItemTouchHelper is added in MainActivity for recycler view swipe feature , new dependency added for RecyclerViewSwipeDecorator onChildDraw method

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#2979ff</color>
     <color name="colorPrimaryDark">#2962ff</color>
     <color name="colorAccent">#f50057</color>
+
+    <color name="delete">#F44336</color>
+
 </resources>
