--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -6,11 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_margin="16dp"
+    android:background="?attr/selectableItemBackground"
+    android:padding="10dp"
     >
 
     <LinearLayout
-        android:layout_width="210dp"
+        android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -19,16 +20,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="20dp"
-            android:layout_marginBottom="8dp"
+            android:textSize="25dp"
+            android:layout_marginBottom="2dp"
             />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/note_item_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:text="Description"
              />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:textColor="@color/colorAccent"
+            android:id="@+id/note_item_date_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="10dp"
+            android:text="Date Time"
+            />
 
     </LinearLayout>
 
